<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pe.edu.upeu.enroll.MainActivity">


    <item
        android:id="@+id/action_new_person"
        android:orderInCategory="100"
        android:title="@string/action_new_person"
        android:icon="@drawable/ic_add"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_synchronize"
        android:orderInCategory="100"
        android:title="@string/action_synchronize"
        android:icon="@drawable/ic_syncrhonize"
        app:showAsAction="always" />

</menu>
